app settings secrets

--- a/EasyNote/Web.config
+++ b/EasyNote/Web.config
@@ -18,15 +18,13 @@
 			<smtp deliveryMethod="Network" deliveryFormat="SevenBit"  from="easynote@kod.fun">
 				<network
 				  host="kod.fun"
-				  userName="easynote@kod.fun"
-				  password="***************"
 				  port="587"
 				  enableSsl="true"
 				/>
 			</smtp>
 		</mailSettings>
 	</system.net>
-	<appSettings>
+	<appSettings file="../../AppSettingsSecrets.config">
 		<add key="webpages:Version" value="3.0.0.0" />
 		<add key="webpages:Enabled" value="false" />
 		<add key="ClientValidationEnabled" value="true" />
