web release config source

--- a/EasyNote/Web.Release.config
+++ b/EasyNote/Web.Release.config
@@ -8,12 +8,14 @@
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator
     finds an attribute "name" that has a value of "MyDB".
 
-  -->
-	<connectionStrings>
+	<connectionStrings configSource="">
 		<add name="DefaultConnection"
         connectionString="server=.\MSSQLSERVER2019;database=kodfun_easynotedb;user id=kodfun_easynoteuser;password="
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
 	</connectionStrings>
+  -->
+	<!-- replaces connectionStrings element in the original Web.config file -->
+	<connectionStrings xdt:Transform="Replace" configSource="ConnectionStrings.config"></connectionStrings>
 	<system.web>
 		<compilation xdt:Transform="RemoveAttributes(debug)" />
 		<!--
